--- a/AssessmentsPOC/AssessmentsPOC.csproj
+++ b/AssessmentsPOC/AssessmentsPOC.csproj
@@ -169,21 +169,23 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AssessmentsController.cs" />
+    <Compile Include="Controllers\ContextsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\SessionsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Assessment.cs" />
     <Compile Include="Models\AssessmentsContext.cs" />
+    <Compile Include="Models\AssessmentsDBInitializer.cs" />
     <Compile Include="Models\AssessmentTypes.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Option.cs" />
     <Compile Include="Models\Question.cs" />
-    <Compile Include="Models\Session.cs" />
+    <Compile Include="Models\Context.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
